# cir4mics

./: LICENSE  README.md  READMEpypi.md  pyproject.toml
CIR4MICS/: Include_models.ipynb  NPC_testlab.ipynb  config.yaml
CIR4MICS/newModels/: ModifyChimeraOutput.py  parse_NPC_cifs.py
NPCpy/: Analyse_deformed.py  DeformNPC.py  Dynamics.ipynb  NPC.py  NPC_plotting.py  NPC_testlab.ipynb  Nups_Info.py  call_functions.py  config.yaml  dynamics.yaml  exportCSV.py
NPCpy/.ipynb_checkpoints/: NPC_testlab-checkpoint.ipynb
NPCpy/data/: Ch_0_nup107_C_x49_model_7r5J_deformmagxy_20_27d34cdc-cd8d-11ed-aea9-05a209767e75_28-Mar-2023.csv  Ch_0_nup107_C_x49_model_7r5J_deformmagxy_20_27d34cdc-cd8d-11ed-aea9-05a209767e75_28-Mar-2023_metadata.txt  NPC_features_Ch_0_nup107_C_x49_model_7r5J_deformmagxy_20_27d34cdc-cd8d-11ed-aea9-05a209767e75_28-Mar-2023.csv  NPC_features_rings_Ch_0_nup107_C_x49_model_7r5J_deformmagxy_20_27d34cdc-cd8d-11ed-aea9-05a209767e75_28-Mar-2023.csv  NPC_features_subcomplex_Ch_0_nup107_C_x49_model_7r5J_deformmagxy_20_27d34cdc-cd8d-11ed-aea9-05a209767e75_28-Mar-2023.csv
NPCpy/newModels/: parse_NPC_cifs.py
cir4mics/: Analyse_deformed.py  DeformNPC.py  Dynamics.ipynb  Include_models.ipynb  NPC.py  NPC_plotting.py  NPC_testlab.ipynb  Nups_Info.py  call_functions.py  exportCSV.py  npc.py  utility.py
cir4mics/.ipynb_checkpoints/: Dynamics-checkpoint.ipynb  NPC_testlab-checkpoint.ipynb
configs/: config.yaml  dynamics.yaml
newModels/: parse_NPC_cifs.py
notebooks/: Dynamics.ipynb  Include_models.ipynb  NPC_testlab.ipynb  Notes_on_imaging_datasets.ipynb
(+11 files in other folders)
